WOR-826 Azure regions (#56)